# MonkeyWriter

./: .gitignore  CMakeLists.txt  MonkeyWriter.pro  README.md  appresources.qrc  main.cpp  mainwindow.ui  menu.cpp  menu.h  workingArea.cpp  workingArea.h
